--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Ohmyfood Website",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./public/style.css"
+    "sass": "sass --watch ./sass/main.scss:./public/style.css",
+    "prefix": "postcss ./public/style.css --use autoprefixer -d ./public/css/prefixed/",
+    "prod":"sass --watch ./sass/main.scss:./public/style.css && postcss ./public/style.css --use autoprefixer -d ./public/css"
   },
   "repository": {
     "type": "git",
